moving configuration to configuration files